[package]
name = "ipano"
version = "0.9.0"
edition = "2021"
description = "一站式 IP 全景聚合检测工具"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
owo-colors = "4"
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
libc = "0.2"

[dev-dependencies]
httpmock = "0.7"
